// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments-1.js 1`] = `
// hi l<|>ol
function ehllooo () {
  const hi = "hi"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// hi l<|>ol
function ehllooo() {
  const hi = "hi";
}

`;

exports[`comments-2.js 1`] = `
<|>
// howdy
// hi lol
const y = 5
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<|>// howdy
// hi lol
const y = 5;

`;

exports[`comments-3.js 1`] = `
/<|>/ howdy
// hi lol
const y = 5
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/<|>/ howdy
// hi lol
const y = 5;

`;

exports[`comments-4.js 1`] = `
// howdy
// hi lol
const y = 5
//  traling! <|>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// howdy
// hi lol
const y = 5;
//  traling!<|>

`;

exports[`file-start-with-comment-1.js 1`] = `
// hi<|> lol
haha()
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// hi<|> lol
haha();

`;

exports[`file-start-with-comment-2.js 1`] = `
// hi lol
haha()<|>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// hi lol
haha()<|>;

`;

exports[`puts the cursor in sensible places 1`] = `
Object {
  "formatted": "return <|>15;
",
  "original": "return        <|> 15",
}
`;

exports[`puts the cursor in sensible places 2`] = `
Object {
  "formatted": "return <|>15;
",
  "original": "return        <|>15",
}
`;

exports[`puts the cursor in sensible places 3`] = `
Object {
  "formatted": "foo<|>(bar);
",
  "original": "
foo  <|>  (bar);
",
}
`;

exports[`puts the cursor in sensible places 4`] = `
Object {
  "formatted": "<|>const y = 5;
",
  "original": "

  <|>

  const y = 5
",
}
`;

exports[`puts the cursor in sensible places 5`] = `
Object {
  "formatted": "const y = 5;

<|>const z = 9;
",
  "original": "

  const y = 5

  <|>

  const z = 9
",
}
`;

exports[`puts the cursor in sensible places 6`] = `
Object {
  "formatted": "const /* h<|>i */ y = 5;
",
  "original": "const    /* h<|>i */    y = 5
",
}
`;

exports[`puts the cursor in sensible places 7`] = `
Object {
  "formatted": "const y /* h<|>i */ = 5;
",
  "original": "const      y    /* h<|>i */   = 5
",
}
`;

exports[`puts the cursor in sensible places 8`] = `
Object {
  "formatted": "const y = 5;
<|>
const z = 9;
",
  "original": "const y = 5
<|>

const z = 9
",
}
`;

exports[`puts the cursor in sensible places 9`] = `
Object {
  "formatted": "func<|>tion banana() {}
",
  "original": "  func<|>tion banana(){}",
}
`;

exports[`puts the cursor in sensible places 10`] = `
Object {
  "formatted": "thisWillBeFormatted<|>(2, 3);
",
  "original": "     thisWillBeFormatted  <|>  (2  ,3,   )",
}
`;

exports[`puts the cursor in sensible places 11`] = `
Object {
  "formatted": "const y = 5;
<|>",
  "original": "const y = 5




<|>
  ",
}
`;

exports[`works with ranges 1`] = `
Object {
  "formatted": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted<|>(2, 3);

    thisWontBeFormatted  (2, 90  ,)
    ",
  "original": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted  <|>  (2  ,3,   )

    thisWontBeFormatted  (2, 90  ,)
    ",
}
`;

exports[`works with ranges 2`] = `
Object {
  "formatted": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3<|>);

    thisWontBeFormatted  (2, 90  ,)
    ",
  "original": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3<|>,   )

    thisWontBeFormatted  (2, 90  ,)
    ",
}
`;

exports[`works with ranges 3`] = `
Object {
  "formatted": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3<|>);

    thisWontBeFormatted  (2, 90  ,)
    ",
  "original": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3,  <|> )

    thisWontBeFormatted  (2, 90  ,)
    ",
}
`;

exports[`works with ranges 4`] = `
Object {
  "formatted": "thisWontBeFormatted <|> ( 1  ,3)

    thisWillBeFormatted(2, 3);

    thisWontBeFormatted  (2, 90  ,)
    ",
  "original": "thisWontBeFormatted <|> ( 1  ,3)

    thisWillBeFormatted    (2  ,3,   )

    thisWontBeFormatted  (2, 90  ,)
    ",
}
`;

exports[`works with ranges 5`] = `
Object {
  "formatted": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3);

    thisWontBeFormatted  (2, 9<|>0  ,)
    ",
  "original": "thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3,   )

    thisWontBeFormatted  (2, 9<|>0  ,)
    ",
}
`;
